examples/test/testpolicy1469.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1469
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key34: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value21
          key39: value30
      podSelector:
        matchLabels:
          key17: value45
          key12: value4
